# gmt

./: .gitignore  Cargo.toml  README.md  logic.md
.uki/: config.yml
src/: log.rs  main.rs  srcds.rs
src/commands/: build.rs  init.rs  mod.rs  start.rs
