[package]
name = "gmt"
description = "GModTool - Tool for gmod server developers."
version = "0.1.0"
edition = "2021"
authors = ["smokingplaya"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
duct = "0.13.7"
inquire = "0.7.5"
lazy_static = "1.4.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_yaml = "0.9.34"